syntax = "proto3";

package generated.timeservice;

option go_package = "getnirm/goserver/generated/timeservice";

message GetCurrentTimeRequest {
}

message GetCurrentTimeResponse {
  string current_time = 1;
}

service TimeService {
  rpc GetCurrentTime(GetCurrentTimeRequest) returns (GetCurrentTimeResponse);
}
